lcs-monlcs (2.4.2~1) UNRELEASED; urgency=low

  [ Sebastien Tack ]
  * update module geogebra

 -- Sebastien Tack <sebastien.tack@ac-caen.fr>  Sat, 24 Oct 2009 18:15:40 +0200

lcs-monlcs (2.4.1) Lcs; urgency=low

  * remove tilde

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Thu,  1 Oct 2009 16:03:06 +0200

lcs-monlcs (2.4.1~1) LcsXP; urgency=low

  [ Sebastien Tack ]
  * update FCKEditor to 2.6.4.1

 -- Sebastien Tack <sebastien.tack@ac-caen.fr>  Wed, 29 Apr 2009 15:03:40 +0200

lcs-monlcs (2.4) Lcs; urgency=low

  * Build a stable release 2.4 

 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 28 May 2009 15:57:33 +0200

lcs-monlcs (2.1-4~2) UNRELEASED; urgency=low

  [ Sebastien Tack ]
  * bug on space when uploading on filename
  * bug on reading spip article when viewing academic resources ( conversion &amp; to & )
  * bug on popup description
  * adding filter for ressources list
  * adding boolean parameter for academic export
  * bad file request for file other.php

 -- Sebastien Tack <sebastien.tack@ac-caen.fr>  Wed, 29 Apr 2009 15:03:40 +0200

lcs-monlcs (2.1-3) Lcs; urgency=low

  [ Simon Cavey ]
  * missing mm module player directory
  * remove backup file
	 
 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Mon, 27 Apr 2009 12:54:40 +0200

lcs-monlcs (2.1-2) Lcs; urgency=low

  * make a working release

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Tue, 21 Apr 2009 13:29:24 +0200

lcs-monlcs (2.1-2~4) UNRELEASED; urgency=low
  [ Jean Luc Chretien ]
  * Mark changelog package UNRELEASED
  * Added automatic detection of the version number of package

  [ Sebastien Tack ]
  * bugs on unicode caracters from browsers
  * bugs on URL with space
  * reload resource when resizing
  * adding upload for mm Freemind resource
  * bug on filename when upload on non Firefox Browser
  *-bug on popup window when browser is Safari
   
 -- Jean Luc Chretien <jean-luc.chretien@tice.ac-caen.fr>  Wed, 01 Apr 2009 18:00:05 +0200
